// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should display manager state with the good color > should display loading Badge 1`] = `
<div>
  <div
    aria-hidden=true
    class=_skeleton
    data-ods=skeleton
    data-testid=badge
  />
</div>
`;

exports[`should display manager state with the good color > should display manager 'active' badge for 'success' 1`] = `
<div>
  <span
    class=_badge _badge--success _badge--md
    data-ods=badge
    data-testid=badge
  >
    service_state_active
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'deleted' badge for 'critical' 1`] = `
<div>
  <span
    class=_badge _badge--critical _badge--md
    data-ods=badge
    data-testid=badge
  >
    service_state_deleted
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'deleted' badge for 'critical' 2`] = `
<div>
  <span
    class=_badge _badge--critical _badge--md
    data-ods=badge
    data-testid=badge
  >
    service_state_deleted
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'suspended' badge for 'warning' 1`] = `
<div>
  <span
    class=_badge _badge--warning _badge--md
    data-ods=badge
    data-testid=badge
  >
    service_state_suspended
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'toActivate' badge for 'information' 1`] = `
<div>
  <span
    class=_badge _badge--information _badge--md
    data-ods=badge
    data-testid=badge
  >
    service_state_toActivate
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'toDelete' badge for 'information' 1`] = `
<div>
  <span
    class=_badge _badge--information _badge--md
    data-ods=badge
    data-testid=badge
  >
    service_state_toDelete
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'toSuspend' badge for 'information' 1`] = `
<div>
  <span
    class=_badge _badge--information _badge--md
    data-ods=badge
    data-testid=badge
  >
    service_state_toSuspend
  </span>
</div>
`;

exports[`should display manager state with the good color > should display manager 'unknown' badge for 'information' 1`] = `
<div>
  <span
    class=_badge _badge--information _badge--md
    data-ods=badge
    data-testid=badge
  >
    unknown
  </span>
</div>
`;
